cmake_minimum_required(VERSION 3.26)
project(Pro2324 C)

set(CMAKE_C_STANDARD 99)

# Por defecto
add_executable(Pro2324 main.c)
# Boletín 1
add_executable(Bol1-Ej01 ./Boletin_1/Ejercicio_01.c)
add_executable(Bol1-Ej02 ./Boletin_1/Ejercicio_02.c)
add_executable(Bol1-Ej03 ./Boletin_1/Ejercicio_03.c)
add_executable(Bol1-Ej04 ./Boletin_1/Ejercicio_04.c)
add_executable(Bol1-Ej05 ./Boletin_1/Ejercicio_05.c)
add_executable(Bol1-Ej06 ./Boletin_1/Ejercicio_06.c)
add_executable(Bol1-Ej07 ./Boletin_1/Ejercicio_07.c)
add_executable(Bol1-Ej08 ./Boletin_1/Ejercicio_08.c)
add_executable(Bol1-Ej09 ./Boletin_1/Ejercicio_09.c)
add_executable(Bol1-Ej10 ./Boletin_1/Ejercicio_10.c)
add_executable(Bol1-Ej11 ./Boletin_1/Ejercicio_11.c)
add_executable(Bol1-Ej12 ./Boletin_1/Ejercicio_12.c)
add_executable(Bol1-Ej13 ./Boletin_1/Ejercicio_13.c)
add_executable(Bol1-Ej14 ./Boletin_1/Ejercicio_14.c)
add_executable(Bol1-Ej15 ./Boletin_1/Ejercicio_15.c)
add_executable(Bol1-Ej16 ./Boletin_1/Ejercicio_16.c)
add_executable(Bol1-Ej17 ./Boletin_1/Ejercicio_17.c)
add_executable(Bol1-Ej18 ./Boletin_1/Ejercicio_18.c)
add_executable(Bol1-Ej19 ./Boletin_1/Ejercicio_19.c)
add_executable(Bol1-Ej20 ./Boletin_1/Ejercicio_20.c)
# Boletín 2
add_executable(Bol2-Ej01 ./Boletin_2/Ejercicio_01.c)
add_executable(Bol2-Ej02 ./Boletin_2/Ejercicio_02.c)
add_executable(Bol2-Ej03 ./Boletin_2/Ejercicio_03.c)
add_executable(Bol2-Ej04 ./Boletin_2/Ejercicio_04.c)
add_executable(Bol2-Ej05 ./Boletin_2/Ejercicio_05.c)
add_executable(Bol2-Ej06 ./Boletin_2/Ejercicio_06.c)
add_executable(Bol2-Ej07 ./Boletin_2/Ejercicio_07.c)
add_executable(Bol2-Ej08 ./Boletin_2/Ejercicio_08.c)
add_executable(Bol2-Ej09 ./Boletin_2/Ejercicio_09.c)
add_executable(Bol2-Ej10 ./Boletin_2/Ejercicio_10.c)
add_executable(Bol2-Ej11 ./Boletin_2/Ejercicio_11.c)
add_executable(Bol2-Ej12 ./Boletin_2/Ejercicio_12.c)
add_executable(Bol2-Ej13 ./Boletin_2/Ejercicio_13.c)
add_executable(Bol2-Ej14 ./Boletin_2/Ejercicio_14.c)
add_executable(Bol2-Ej15 ./Boletin_2/Ejercicio_15.c)
add_executable(Bol2-Ej17 ./Boletin_2/Ejercicio_17.c)
add_executable(Bol2-Ej28 ./Boletin_2/Ejercicio_28.c)
add_executable(Bol2-Ej39 ./Boletin_2/Ejercicio_39.c)
add_executable(Bol2-Ej43 ./Boletin_2/Ejercicio_43.c)
# Boletín 3
add_executable(Bol3-Ej01 ./Boletin_3/Ejercicio_01.c)
add_executable(Bol3-Ej02 ./Boletin_3/Ejercicio_02.c)
add_executable(Bol3-Ej03 ./Boletin_3/Ejercicio_03.c)
add_executable(Bol3-Ej04 ./Boletin_3/Ejercicio_04.c)
add_executable(Bol3-Ej05 ./Boletin_3/Ejercicio_05.c)
add_executable(Bol3-Ej06 ./Boletin_3/Ejercicio_06.c)
add_executable(Bol3-Ej07 ./Boletin_3/Ejercicio_07.c)
add_executable(Bol3-Ej08 ./Boletin_3/Ejercicio_08.c)
add_executable(Bol3-Ej09 ./Boletin_3/Ejercicio_09.c)
add_executable(Bol3-Ej10 ./Boletin_3/Ejercicio_10.c)
add_executable(Bol3-Ej23 ./Boletin_3/Ejercicio_23.c)
# Prácticas

# Extras