# SPDX-FileCopyrightText: 2023 Pablo Portas López <pablo.portas@udc.es>
#
# SPDX-License-Identifier: GPL-3.0-only

cmake_minimum_required(VERSION 3.22)
project(Boletin_1 C)

set(CMAKE_C_STANDARD 99)

add_executable(Bol1-Ej01 Ejercicio_01.c)
add_executable(Bol1-Ej02 Ejercicio_02.c)
add_executable(Bol1-Ej03 Ejercicio_03.c)
add_executable(Bol1-Ej04 Ejercicio_04.c)
add_executable(Bol1-Ej05 Ejercicio_05.c)
add_executable(Bol1-Ej06 Ejercicio_06.c)
add_executable(Bol1-Ej07 Ejercicio_07.c)
add_executable(Bol1-Ej08 Ejercicio_08.c)
add_executable(Bol1-Ej09 Ejercicio_09.c)
add_executable(Bol1-Ej10 Ejercicio_10.c)
add_executable(Bol1-Ej11 Ejercicio_11.c)
add_executable(Bol1-Ej12 Ejercicio_12.c)
add_executable(Bol1-Ej13 Ejercicio_13.c)
add_executable(Bol1-Ej14 Ejercicio_14.c)
add_executable(Bol1-Ej15 Ejercicio_15.c)
add_executable(Bol1-Ej16 Ejercicio_16.c)
add_executable(Bol1-Ej17 Ejercicio_17.c)
add_executable(Bol1-Ej18 Ejercicio_18.c)
add_executable(Bol1-Ej19 Ejercicio_19.c)
add_executable(Bol1-Ej20 Ejercicio_20.c)