# SPDX-FileCopyrightText: 2023 Pablo Portas López <pablo.portas@udc.es>
#
# SPDX-License-Identifier: GPL-3.0-only

cmake_minimum_required(VERSION 3.26)
project(Boletin_2 C)

set(CMAKE_C_STANDARD 99)

add_executable(Bol2-Ej01 Ejercicio_01.c)
add_executable(Bol2-Ej02 Ejercicio_02.c)
add_executable(Bol2-Ej03 Ejercicio_03.c)
add_executable(Bol2-Ej04 Ejercicio_04.c)
add_executable(Bol2-Ej05 Ejercicio_05.c)
add_executable(Bol2-Ej06 Ejercicio_06.c)
add_executable(Bol2-Ej07 Ejercicio_07.c)
add_executable(Bol2-Ej08 Ejercicio_08.c)
add_executable(Bol2-Ej09 Ejercicio_09.c)
add_executable(Bol2-Ej10 Ejercicio_10.c)
add_executable(Bol2-Ej11 Ejercicio_11.c)
add_executable(Bol2-Ej12 Ejercicio_12.c)
add_executable(Bol2-Ej13 Ejercicio_13.c)
add_executable(Bol2-Ej14 Ejercicio_14.c)
add_executable(Bol2-Ej15 Ejercicio_15.c)
add_executable(Bol2-Ej16 Ejercicio_16.c)
add_executable(Bol2-Ej17 Ejercicio_17.c)
add_executable(Bol2-Ej18 Ejercicio_18.c)
add_executable(Bol2-Ej19 Ejercicio_19.c)
add_executable(Bol2-Ej20 Ejercicio_20.c)
add_executable(Bol2-Ej21 Ejercicio_21.c)
add_executable(Bol2-Ej22 Ejercicio_22.c)
add_executable(Bol2-Ej23 Ejercicio_23.c)
add_executable(Bol2-Ej24 Ejercicio_24.c)
add_executable(Bol2-Ej25 Ejercicio_25.c)
add_executable(Bol2-Ej26 Ejercicio_26.c)
add_executable(Bol2-Ej27 Ejercicio_27.c)
add_executable(Bol2-Ej28 Ejercicio_28.c)
add_executable(Bol2-Ej29 Ejercicio_29.c)
add_executable(Bol2-Ej30 Ejercicio_30.c)
add_executable(Bol2-Ej31 Ejercicio_31.c)
add_executable(Bol2-Ej32 Ejercicio_32.c)
add_executable(Bol2-Ej33 Ejercicio_33.c)
add_executable(Bol2-Ej34 Ejercicio_34.c)
add_executable(Bol2-Ej35 Ejercicio_35.c)
add_executable(Bol2-Ej36 Ejercicio_36.c)
add_executable(Bol2-Ej37 Ejercicio_37.c)
add_executable(Bol2-Ej38 Ejercicio_38.c)
add_executable(Bol2-Ej39 Ejercicio_39.c)
add_executable(Bol2-Ej40 Ejercicio_40.c)
add_executable(Bol2-Ej41 Ejercicio_41.c)
add_executable(Bol2-Ej42 Ejercicio_42.c)
add_executable(Bol2-Ej43 Ejercicio_43.c)
add_executable(Bol2-Ej44 Ejercicio_44.c)
add_executable(Bol2-Ej45 Ejercicio_45.c)
add_executable(Bol2-Ej46 Ejercicio_46.c)
add_executable(Bol2-Ej47 Ejercicio_47.c)
add_executable(Bol2-Ej48 Ejercicio_48.c)
add_executable(Bol2-Ej49 Ejercicio_49.c)
add_executable(Bol2-Ej50 Ejercicio_50.c)

