# SPDX-FileCopyrightText: 2023 Pablo Portas López <pablo.portas@udc.es>
#
# SPDX-License-Identifier: GPL-3.0-only

cmake_minimum_required(VERSION 3.25)
project(Boletin_3 C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_BUILD_TYPE Debug)

add_executable(Bol3-Ej01 Ejercicio_01.c)
add_executable(Bol3-Ej02 Ejercicio_02.c)
add_executable(Bol3-Ej03 Ejercicio_03.c)
add_executable(Bol3-Ej04 Ejercicio_04.c)
add_executable(Bol3-Ej05 Ejercicio_05.c)
add_executable(Bol3-Ej06 Ejercicio_06.c)
add_executable(Bol3-Ej07 Ejercicio_07.c)
add_executable(Bol3-Ej08 Ejercicio_08.c)
add_executable(Bol3-Ej09 Ejercicio_09.c)
add_executable(Bol3-Ej10 Ejercicio_10.c)
add_executable(Bol3-Ej11 Ejercicio_11.c)
add_executable(Bol3-Ej12 Ejercicio_12.c)
add_executable(Bol3-Ej13 Ejercicio_13.c)
add_executable(Bol3-Ej14 Ejercicio_14.c)
add_executable(Bol3-Ej15 Ejercicio_15.c)
add_executable(Bol3-Ej16 Ejercicio_16.c)
add_executable(Bol3-Ej17 Ejercicio_17.c)
add_executable(Bol3-Ej18 Ejercicio_18.c)
add_executable(Bol3-Ej19 Ejercicio_19.c)
add_executable(Bol3-Ej20 Ejercicio_20.c)
add_executable(Bol3-Ej21 Ejercicio_21.c)
add_executable(Bol3-Ej22 Ejercicio_22.c)
add_executable(Bol3-Ej23 Ejercicio_23.c)
add_executable(Bol3-Ej24 Ejercicio_24.c)
add_executable(Bol3-Ej25 Ejercicio_25.c)
add_executable(Bol3-Ej26 Ejercicio_26.c)
add_executable(Bol3-Ej27 Ejercicio_27.c)
add_executable(Bol3-Ej28 Ejercicio_28.c)
add_executable(Bol3-Ej29 Ejercicio_29.c)
add_executable(Bol3-Ej30 Ejercicio_30.c)
add_executable(Bol3-Ej31 Ejercicio_31.c)
add_executable(Bol3-Ej32 Ejercicio_32.c)
add_executable(Bol3-Ej33 Ejercicio_33.c)
add_executable(Bol3-Ej34 Ejercicio_34.c)
add_executable(Bol3-Ej35 Ejercicio_35.c)
add_executable(Bol3-Ej36 Ejercicio_36.c)

#Necesario para math.h
target_link_libraries(Bol3-Ej04 m)
target_link_libraries(Bol3-Ej13 m)
target_link_libraries(Bol3-Ej25 m)
target_link_libraries(Bol3-Ej29 m)
target_link_libraries(Bol3-Ej35 m)
target_link_libraries(Bol3-Ej36 m)
