cmake_minimum_required(VERSION 3.26)
project(Boletin_4 C)

set(CMAKE_C_STANDARD 99)

#add_executable(Bol4-Ej01 Ejercicio_01.c)
#add_executable(Bol4-Ej02 Ejercicio_02.c)
#add_executable(Bol4-Ej03 Ejercicio_03.c)
#add_executable(Bol4-Ej04 Ejercicio_04.c)
#add_executable(Bol4-Ej05 Ejercicio_05.c)
#add_executable(Bol4-Ej06 Ejercicio_06.c)
#add_executable(Bol4-Ej07 Ejercicio_07.c)
#add_executable(Bol4-Ej08 Ejercicio_08.c)
#add_executable(Bol4-Ej09 Ejercicio_09.c)
#add_executable(Bol4-Ej10 Ejercicio_10.c)
#add_executable(Bol4-Ej11 Ejercicio_11.c)
#add_executable(Bol4-Ej12 Ejercicio_12.c)
#add_executable(Bol4-Ej13 Ejercicio_13.c)
#add_executable(Bol4-Ej14 Ejercicio_14.c)
#add_executable(Bol4-Ej15 Ejercicio_15.c)
#add_executable(Bol4-Ej16 Ejercicio_16.c)
#add_executable(Bol4-Ej17 Ejercicio_17.c)
#add_executable(Bol4-Ej18 Ejercicio_18.c)
#add_executable(Bol4-Ej19 Ejercicio_19.c)
#add_executable(Bol4-Ej20 Ejercicio_20.c)
#add_executable(Bol4-Ej21 Ejercicio_21.c)
#add_executable(Bol4-Ej22 Ejercicio_22.c)
#add_executable(Bol4-Ej23 Ejercicio_23.c)
#add_executable(Bol4-Ej24 Ejercicio_24.c)
#add_executable(Bol4-Ej25 Ejercicio_25.c)
#add_executable(Bol4-Ej26 Ejercicio_26.c)
#add_executable(Bol4-Ej27 Ejercicio_27.c)
#add_executable(Bol4-Ej28 Ejercicio_28.c)
#add_executable(Bol4-Ej29 Ejercicio_29.c)
#add_executable(Bol4-Ej30 Ejercicio_30.c)
#add_executable(Bol4-Ej31 Ejercicio_31.c)
#add_executable(Bol4-Ej32 Ejercicio_32.c)
#add_executable(Bol4-Ej33 Ejercicio_33.c)
#add_executable(Bol4-Ej34 Ejercicio_34.c)
#add_executable(Bol4-Ej35 Ejercicio_35.c)
#add_executable(Bol4-Ej36 Ejercicio_36.c)
#add_executable(Bol4-Ej37 Ejercicio_37.c)
#add_executable(Bol4-Ej38 Ejercicio_38.c)
#add_executable(Bol4-Ej39 Ejercicio_39.c)
#add_executable(Bol4-Ej40 Ejercicio_40.c)
