# SPDX-FileCopyrightText: 2023 Pablo Portas López <pablo.portas@udc.es>
#
# SPDX-License-Identifier: GPL-3.0-only

cmake_minimum_required(VERSION 3.22)
project(Boletin_4 C)

set(CMAKE_C_STANDARD 99)

#add_executable(Examen_Grupo_3.1 Examen_Grupo_3.1.c)
#add_executable(Examen_Grupo_2.2_Ejercicio_1 Examen_Grupo_2.2_Ejercicio_1.c)
#add_executable(Examen_Grupo_2.2_Ejercicio_2 Examen_Grupo_2.2_Ejercicio_2.c)